@@ -1,3 +1,7 @@
+2009-07-09  Martin Leidig  <mleidig@schlund.de>
+
+	Re-added forgotten defaultflow config option for pagerequests.
+
 2009-06-30  Martin Leidig  <mleidig@schlund.de>
 
 	Return null instead of throwing a NPE when calling
